--- a/eniato/base-templates/base-structure.html
+++ b/eniato/base-templates/base-structure.html
@@ -32,7 +32,7 @@
         {% endblock header %}
 
         <main role="main">
-            <div class="container px-3 py-3 pt-md-5 pb-md-4 mx-auto">
+            <div class="container">
                 {% if messages %}
                   {% for message in messages %}
                       <br>
